# file_client_app

./: pyproject.toml
tests/: test_file_client_app.py
