[tool.poetry]
name = "file_client_app"
version = "0.1.0"
description = ""
authors = ["Jan Novotný <jan.novotny.p@gmail.com>"]
readme = "readme.md"

[tool.poetry.scripts]
file-client = "file_client_app.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
